--- a/static/style.css
+++ b/static/style.css
@@ -28,30 +28,57 @@ opacity: 1;
     align-items: center;
     height: 257px;
     width: 184px; /* Set a fixed height or use other responsive techniques */
+    transition: transform .2s, border-color .2s; /* Add border-color transition */
 }
 
 .grid-item:hover {
     transform: scale(1.05);
+    
 }
-
+.grid-item:hover .grid-item-title {
+    background-color: rgba(0, 0, 0, 0.7); /* Slightly darker on hover */
+    color: #e0e0e0; /* Light grey text on hover */
+}
 .grid-item .stats {
     display: none;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     background: rgba(0, 0, 0, 0.75);
     color: white;
-    align-items: center;
-    justify-content: center;
     text-align: center;
     border-radius: .25rem;
+    font-family: 'Roboto', sans-serif;
+    padding: 5px 10px;
+    transition: all 0.3s ease;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
 }
+
 
 .grid-item:hover .stats {
     display: flex;
+    /* Position your stats element according to your preference */
+    
+    
+   
 }
+/* Custom styles for different hover states */
+.grid-item.border-completed:hover .stats {
+    background: rgba(9, 224, 9, 0.8);
+}
+
+.grid-item.border-planning:hover .stats {
+    background: rgba(255, 193, 7, 0.8);
+}
+
+.grid-item.border-current:hover .stats {
+    background: rgba(14, 159, 212, 0.8);
+}
+
+.grid-item.border-paused:hover .stats {
+    background: rgba(224, 33, 8, 0.8);
+}
+
+
+
 
 .grid-item .anilist-icon {
     position: absolute;
@@ -70,39 +97,37 @@ opacity: 1;
     align-items: center;
 }
 
+.grid-item .score-icon {
+    position: absolute;
+    top: 10px; /* Adjust as needed */
+    left: 10px; /* Adjust as needed */
+    z-index: 10; /* Ensure it's above the hover overlay */
+    cursor: pointer;
+    width: 35px; /* Adjust size as needed */
+    height: 35px; /* Adjust size as needed */
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black; /* Text color */
+    font-weight: bold; /* Makes the score stand out */
+    font-size: 1em; /* Adjust as needed */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for hover effects */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Text shadow for better readability */
+    border: 3px solid rgba(26, 26, 26, 0.5); /* Slightly visible border */
+}
+
+/* Hover effect for interaction */
+.grid-item .score-icon:hover {
+    transform: scale(1.1); /* Slightly enlarges the icon */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Enhanced shadow on hover */
+}
+
 
 
 
-/* Style for .stats on hover when .grid-item has .border-completed */
-.grid-item.border-completed:hover .stats {
-    /* Your custom styles for completed items on hover */
-    background: rgba(9, 224, 9, 0.5); /* Example: a lighter shade of green on hover */
-    
-    
-    /* Add other styles as needed */
-}
 
-.grid-item.border-planning:hover .stats {
-    /* Your custom styles for completed items on hover */
-    background: rgba(255, 193, 7, 0.5); /* Example: a lighter shade of green on hover */
-    
-    
-    /* Add other styles as needed */
-}
-.grid-item.border-current:hover .stats {
-    /* Your custom styles for completed items on hover */
-    background: rgba(14, 159, 212, 0.5); /* Example: a lighter shade of green on hover */
-    
-    
-    /* Add other styles as needed */
-}
-.grid-item.border-paused:hover .stats {
-    /* Your custom styles for completed items on hover */
-    background: rgba(224, 33, 8, 0.5); /* Example: a lighter shade of green on hover */
-    
-    
-    /* Add other styles as needed */
-}
 
 
 
@@ -113,12 +138,22 @@ opacity: 1;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black background */
     color: white; /* White text color */
+    font-family: 'Roboto', sans-serif;
     padding: 5px 10px; /* Padding inside the background */
     font-size: 1em; /* Adjustable based on your design */
     text-align: center; /* Centered text */
     box-sizing: border-box; /* Includes padding in width */
-    font-family: 'Arial', sans-serif; /* Modern, legible font */
+    border-radius: 8px; /* Soft rounded corners */
+    text-shadow: 1px 1px 2px black; /* Subtle text shadow for readability */
+    transition: all 0.3s ease; /* Smooth transition for hover effects */
+    line-height: 1.2; /* Adjust this value as needed */
 }
+
+.grid-item-title:hover {
+    background-color: rgba(0, 0, 0, 0.7); /* Slightly darker on hover */
+    color: #e0e0e0; /* Light grey text on hover */
+}
+
 
 
 /* This is to create a dark overlay so the text is readable on any background */
@@ -714,3 +749,6 @@ body .navbar.navbar-expand-md.navbar-dark.bg-dark .navbar-nav .nav-link.active {
 
 .chapter-icon.flip { animation: flip 3s ease-in-out infinite; }
 .progress-icon.bounce { animation: bounce 2s ease-in-out infinite; }
+
+
+/* ------------------------------------------------------------------------- */
