added counting stats for left menu

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,18 +73,21 @@
 
     <h5>List</h5>
     <div id="list-status-filter" class="status-filter">
-        <div class="status-option" data-value=""><i class="fas fa-stream"></i> All Statuses <span class="status-count">0</span></div>
-        <div class="status-option" data-value="COMPLETED"><i class="fas fa-check-circle"></i> Completed <span class="status-count">0</span></div>
-        <div class="status-option" data-value="PLANNING"><i class="fas fa-lightbulb"></i> Planning <span class="status-count">0</span></div>
-        <div class="status-option" data-value="CURRENT"><i class="fas fa-book-open"></i> Reading <span class="status-count">0</span></div>
-        <div class="status-option" data-value="PAUSED"><i class="fas fa-pause-circle"></i> On Hold <span class="status-count">0</span></div>
+        <div class="status-option" data-value=""><i class="fas fa-stream"></i> All Statuses <span class="status-count" id="count-all-user-stats">0</span></div>
+        <div class="status-option" data-value="CURRENT"><i class="fas fa-book-open"></i> Reading <span class="status-count" id="count-current">0</span></div>
+        <div class="status-option" data-value="COMPLETED"><i class="fas fa-check-circle"></i> Completed <span class="status-count" id="count-completed">0</span></div>
+        <div class="status-option" data-value="PLANNING"><i class="fas fa-lightbulb"></i> Planning <span class="status-count" id="count-planning">0</span></div>
+        <div class="status-option" data-value="PAUSED"><i class="fas fa-pause-circle"></i> On Hold <span class="status-count" id="count-paused">0</span></div>
     </div>
     
+
+
+
     <h5>Status of release</h5>
     <div id="release-status-filter" class="status-filter">
-        <div class="statusReleasing-option" data-value=""><i class="fas fa-stream"></i> All Statuses <span class="status-count">0</span></div>
-        <div class="statusReleasing-option" data-value="RELEASING"><i class="fas fa-play-circle"></i> Releasing <span class="status-count">0</span></div>
-        <div class="statusReleasing-option" data-value="FINISHED"><i class="fas fa-flag-checkered"></i> Finished <span class="status-count">0</span></div>
+        <div class="statusReleasing-option" data-value=""><i class="fas fa-stream"></i> All Statuses <span class="status-count" id="count-all-release-stats">0</span></div>
+        <div class="statusReleasing-option" data-value="RELEASING"><i class="fas fa-play-circle"></i> Releasing <span class="status-count" id="count-releasing">0</span></div>
+        <div class="statusReleasing-option" data-value="FINISHED"><i class="fas fa-flag-checkered"></i> Finished <span class="status-count" id="count-finished">0</span></div>
     </div>
 
     <h5>Country</h5>
