--- a/static/style.css
+++ b/static/style.css
@@ -559,7 +559,7 @@ body .navbar.navbar-expand-md.navbar-dark.bg-dark .navbar-nav .nav-link.active {
 
 /* Header styling */
 .chat-header {
-    background-color: #4CAF50;
+    background-color: #007BFF;
     color: white;
     padding: 10px 20px;
     text-align: center;
@@ -622,6 +622,9 @@ body .navbar.navbar-expand-md.navbar-dark.bg-dark .navbar-nav .nav-link.active {
     border: none;
     border-radius: 4px;
     margin-right: 8px;
+    background-color: #2b2b2b;
+    color:white;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* Send button styling */
@@ -629,7 +632,7 @@ body .navbar.navbar-expand-md.navbar-dark.bg-dark .navbar-nav .nav-link.active {
     padding: 8px 15px;
     border: none;
     border-radius: 4px;
-    background-color: #4CAF50;
+    background-color: #007BFF;
     color: white;
     cursor: pointer;
 }
@@ -639,12 +642,11 @@ body .navbar.navbar-expand-md.navbar-dark.bg-dark .navbar-nav .nav-link.active {
     position: fixed;
     bottom: 10px;
     right: 10px;
-    background-color: #4CAF50;
+    background-color: #007BFF;
     color: white;
     border: none;
     border-radius: 50%;
     width: 40px;
-    height: 40px;
     cursor: pointer;
     font-size: 24px;
     text-align: center;
