--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript">
+        var isDevelopment = {{ isDevelopment | tojson }};
+    </script>
+    
+
 
     <!-- Bootstrap CSS (choose either version 4 or 5, not both) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +28,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-
+    
     <title>My Reading List</title>
 </head>
     
@@ -58,7 +63,8 @@
                 <a class="nav-link" onclick="filterByType('MANGA')" href="#">Japanese Mangas</a>
             </li>
             <li class="nav-item">
-                <button id="syncButton" class="btn btn-primary" type="button" onclick="console.log('Button clicked')">Sync List</button>
+                <button id="syncButton" class="btn btn-primary" type="button">Sync List</button>
+
 
             </li>
         </ul>
