--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -212,7 +212,7 @@
             <div class="score-icon" data-score="{{ entry.score }}" id="score-icon-{{ loop.index }}"></div>
 
 
-
+            <div class="favorite-icon" data-is-favourite="{{ entry.is_favourite }}"></div>
                     
             <!-- AniList Icon -->
             <div class="anilist-icon" onclick="openAniList(this.parentNode.getAttribute('data-anilist-url'))"></div>
