--- a/app/static/style.css
+++ b/app/static/style.css
@@ -262,7 +262,6 @@ opacity: 1;
 
 .status-option {
     padding: 0.5rem 1rem; /* Padding inside each option */
-    margin: 0.2rem 0; /* Margin between options */
     border-radius: 5px; /* Rounded corners for each option */
     cursor: pointer; /* Change cursor to indicate clickable */
     transition: background-color 0.3s; /* Smooth background color transition */
@@ -275,7 +274,6 @@ opacity: 1;
 
 .statusReleasing-option {
     padding: 0.5rem 1rem; /* Padding inside each option */
-    margin: 0.2rem 0; /* Margin between options */
     border-radius: 5px; /* Rounded corners for each option */
     cursor: pointer; /* Change cursor to indicate clickable */
     transition: background-color 0.3s; /* Smooth background color transition */
@@ -825,6 +823,22 @@ body .navbar.navbar-expand-md.navbar-dark.bg-dark .navbar-nav .nav-link.active {
 }
 
 
+/* Applies color to the icons in the status filter options */
+#list-status-filter .status-option[data-value="COMPLETED"] i {
+    color: rgb(40, 167, 69); /* green for completed */
+}
+
+#list-status-filter .status-option[data-value="CURRENT"] i {
+    color: rgb(14, 159, 212); /* blue for current/reading */
+}
+
+#list-status-filter .status-option[data-value="PAUSED"] i {
+    color: rgb(224, 33, 8); /* red for paused */
+}
+
+#list-status-filter .status-option[data-value="PLANNING"] i {
+    color: rgb(255, 193, 7); /* yellow for planning */
+}
 
 
 
@@ -832,7 +846,10 @@ body .navbar.navbar-expand-md.navbar-dark.bg-dark .navbar-nav .nav-link.active {
 #side-menu-right::-webkit-scrollbar {
     display: none;
 }
-
+/* Hide scrollbar for Chrome, Safari and Opera */
+#side-menu::-webkit-scrollbar {
+    display: none;
+}
 
 @keyframes rotate {
     from { transform: rotate(0deg); }
@@ -881,3 +898,15 @@ body .navbar.navbar-expand-md.navbar-dark.bg-dark .navbar-nav .nav-link.active {
 
 /* ------------------------------------------------------------------------- */
 
+.form-check-label {
+    display: flex;
+    align-items: center; /* Aligns the icon vertically with the text */
+    gap: 5px; /* Adds some space between the icon and the text */
+}
+
+.form-check-label img.flag-icon {
+    width: 20px; /* Adjust the width as needed */
+    height: auto; /* Keeps the aspect ratio of the flag */
+    object-fit: cover; /* Ensures the image covers the area, useful for non-square images */
+    border-radius: 4px; /* Rounds the corners of the flag images */
+}
