added reread icon with little animation

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -550,21 +550,52 @@ opacity: 1;
 }
 
 #sidebar-reread-icon {
-    color: white;
-    background-color: red; /* Background color of the circle */
     position: absolute;
-    bottom: 10px; /* Adjust as necessary */
-    right: 50px; /* Adjust based on your layout, ensure it doesn't overlap with the favorite icon */
-    width: 30px; /* Diameter of the circle */
-    height: 30px; /* Diameter of the circle */
-    border-radius: 50%; /* Makes the element a circle */
+    top: 0px;
+    right: -10px;
+    z-index: 100000;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-shadow: none;
-    font-size: 1rem; /* Adjust size as needed */
-    z-index: 10;
-    box-shadow: 0 0 8px #000; /* Optional: Adds a subtle shadow for depth */
+}
+
+#sidebar-reread-icon .fas {
+    color: rgb(55, 160, 249); /* Color of the rotating arrow */
+    position: absolute;
+    font-size: 2rem; /* Adjust the size of the arrow */
+    animation: rotate 2s linear infinite;
+    z-index: 100000;
+}
+
+#sidebar-reread-icon .reread-count {
+    color: white;
+    background-color: #2a2a2a;
+    border-radius: 50%;
+    width: 30px; /* Adjust based on content */
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    z-index: 10000;
+    box-shadow: 0 0 8px #000;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+#sidebar-reread-icon {
+    transition: transform 0.5s ease-in-out; /* Smooth transition for scaling */
+}
+
+#sidebar-reread-icon.scale-up {
+    transform: scale(2); /* Scale up effect */
 }
 
 
