--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -254,9 +254,7 @@
 
 
             <div class="favorite-icon" data-is-favourite="{{ entry.is_favourite }}"></div>
-            <div id="reread-cover" class="reread-icon new-location" data-reread-times="{{ entry.reread_times }}">
-                <!-- The new icon will be appended here by JavaScript -->
-            </div>
+            <div class="reread-cover-icon"  data-reread-times="{{ entry.reread_times }}"></div>
             
                     
             <!-- AniList Icon -->
