added reread icon to covers, in sorting and in right menu

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -144,8 +144,8 @@ opacity: 1;
 }
 #reread-icon-grid {
     position: absolute;
-    top: 10px; /* Adjusted for better alignment */
-    right: 10px; /* Adjusted for better alignment */
+    top: -15px; /* Adjusted for better alignment */
+    right: -15px; /* Adjusted for better alignment */
     z-index: 10;
     width: auto; /* Changed to auto for content size */
     height: auto; /* Changed to auto for content size */
@@ -154,7 +154,7 @@ opacity: 1;
     justify-content: center;
     align-items: center;
     color: white; /* Example color, adjust as needed */
-    background-color: rgba(255, 192, 203, 0.9); /* Soft pink background with transparency */
+    background-color: #007bff; /* Soft pink background with transparency */
     text-shadow: none; /* Remove text shadow for better legibility */
     font-size: 16px; /* Adjust based on the size of your icon and text */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -162,6 +162,17 @@ opacity: 1;
     border: 2px solid white; /* White border to define the icon */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
 }
+
+#reread-icon-grid .fa-book {
+    margin-right: 3px; /* Adjust space as needed */
+    /* other styling as needed */
+}
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+.reread-number {
+    font-family: 'Pacifico', cursive; /* Or whichever cute font you choose */
+    /* additional styling */
+}
+
 
 
 
